fix alignment

--- a/style.css
+++ b/style.css
@@ -297,85 +297,6 @@ nav ul li a:hover::after {
 }
 
 
-/* ------------------- CSS For Mobile Screens ------------------- */
-
-@media screen and (max-width: 890px) {
-    nav ul {
-        position: absolute;
-        top: 0px;
-        right: -500px;
-        height: 100vh;
-        width: 40%;
-        background: var(--primary-color);
-        display: flex;
-        flex-direction: column;
-        padding: 25px 25px;
-        z-index: 4;
-    }
-    nav ul .fa-solid {
-        position: absolute;
-        top: 15px;
-        right: 15px;
-        transition: color 0.5s;
-    }
-    nav ul .fa-solid:hover {
-        color: black;
-    }
-    nav .fa-solid,
-    nav p {
-        display: block;
-        font-size: 35px;
-        cursor: pointer;
-    }
-    nav ul li a {
-        transition: color 0.5s;
-        font-size: 23px;
-        margin-top: 15px;
-    }
-    nav ul li a:hover {
-        color: black;
-    }
-    .skill-list {
-        display: flex;
-        flex-direction: column;
-    }
-    .skills-first-set {
-        display: flex;
-        flex-direction: column;
-        align-self: center;
-    }
-    .skills-last-set {
-        display: flex;
-        flex-direction: column;
-        align-self: center;
-    }
-    .skills-container {
-        margin: 20px;
-        width: 180px;
-        height: 180px;
-        font-size: 10px;
-        position: relative;
-    }
-    #avatar {
-        width: 200px;
-        height: 200px;
-        border-radius: 50%;
-        margin: 20px auto;
-        display: block;
-        border: 5px solid var(--primary-color);
-    }
-    .typing-container,
-    p {
-        font-size: 15px;
-    }
-    /* ------------------- skills ------------------- */
-    #specialize {
-        text-align: center;
-        padding: 2em;
-    }
-}
-
-
 /* ------------------- Projects ------------------- */
 
 .section.projects .filters {
@@ -591,6 +512,7 @@ p.brandtext a {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
     margin-top: 40px;
+    left: 5%;
 }
 
 .projects-col {
@@ -696,7 +618,7 @@ textarea::placeholder {
 #contact form input[type="submit"] {
     background-color: var(--primary-color);
     width: fit-content;
-    font-size: 16px;
+    font-size: 20px;
     font-weight: 400;
     color: white;
     border-radius: 20px;
@@ -778,5 +700,105 @@ button {
     }
     nav ul li a {
         font-size: 20px;
+    }
+    #contact .row {
+        display: block;
+    }
+    .contact-right p {
+        font-size: 16px;
+    }
+    #projects .row {
+        left: 11%;
+    }
+}
+
+
+/* ------------------- CSS For Mobile Screens ------------------- */
+
+@media screen and (max-width: 890px) {
+    nav ul {
+        position: absolute;
+        top: 0px;
+        right: 100%;
+        height: 100vh;
+        width: 40%;
+        background: var(--primary-color);
+        display: flex;
+        flex-direction: column;
+        padding: 25px 25px;
+        z-index: 4;
+    }
+    nav ul .fa-solid {
+        position: absolute;
+        top: 15px;
+        right: 15px;
+        transition: color 0.5s;
+    }
+    nav ul .fa-solid:hover {
+        color: black;
+    }
+    nav .fa-solid,
+    nav p {
+        display: block;
+        font-size: 35px;
+        cursor: pointer;
+    }
+    nav ul li a {
+        transition: color 0.5s;
+        font-size: 23px;
+        margin-top: 15px;
+    }
+    nav ul li a:hover {
+        color: black;
+    }
+    .skill-list {
+        display: flex;
+        flex-direction: column;
+    }
+    .skills-first-set {
+        display: flex;
+        flex-direction: column;
+        align-self: center;
+    }
+    .skills-last-set {
+        display: flex;
+        flex-direction: column;
+        align-self: center;
+    }
+    .skills-container {
+        margin: 20px;
+        width: 180px;
+        height: 180px;
+        font-size: 10px;
+        position: relative;
+    }
+    #avatar {
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        margin: 20px auto;
+        display: block;
+        border: 5px solid var(--primary-color);
+    }
+    .typing-container,
+    p {
+        font-size: 15px;
+    }
+    /* ------------------- skills ------------------- */
+    #specialize {
+        text-align: center;
+        padding: 3em;
+    }
+    .about {
+        flex-direction: column;
+        height: 80vh;
+        display: flex;
+        justify-content: space-evenly;
+    }
+    #projects .row {
+        left: 8.5%;
+    }
+    footer p {
+        font-size: 12px;
     }
 }
